--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
-  line-height: 1, 19;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   text-decoration: none;
   color: #000000;
@@ -20,56 +20,53 @@ body {
 .first-text {
   color: #2196f3;
 }
-
-.navigation-list a {
+.header-list,
+.contacts-list,
+.intormation-contacts {
+  list-style: none;
+}
+.navigation-list {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--body-color);
   text-decoration: none;
 }
-.porfolio a {
-  color: #2196f3;
-}
-.navigation-list > li {
-  list-style: none;
-}
-.navigation-list a:hover,
-.navigation-list a:focus {
+.navigation-list:hover,
+.navigation-list:focus {
   color: var(--hover-focus-color);
 }
-.contacts-list a {
+.contacts {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
   text-decoration: none;
 }
-.contacts-list > li {
-  list-style: none;
-}
-.contacts-list a:hover,
-.contacts-list a:focus {
+.contacts:hover,
+.contacts:focus {
   color: var(--hover-focus-color);
 }
 .button-section {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1, 62;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
   list-style: none;
   cursor: pointer;
 }
-.button-all {
-  color: var(--white-color);
-  background-color: #2196f3;
+.button {
+  background-color: #f5f4fa;
+  border-style: none;
+  border-radius: 4px;
 }
-.button-section button:hover,
-.button-section button:focus {
-  color: var(--hover-focus-color);
+.button:hover,
+.button:focus {
+  background-color: var(--hover-focus-color);
+  color: var(--white-color);
 }
 .images-section ul {
   list-style: none;
@@ -83,28 +80,33 @@ body {
 .text-section {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1, 87;
+  line-height: 1.87;
   letter-spacing: 0.03em;
   color: #757575;
 }
 .footer-section {
   background-color: #2f303a;
 }
-.intormation-contacts a {
+
+.address {
+  color: var(--white-color);
+  font-style: normal;
+  text-decoration: none;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   letter-spacing: 0.03em;
-  color: var(--white-color);
+}
+.contact-data {
   text-decoration: none;
-}
-.intormation-contacts > li {
-  list-style: none;
-}
-.contact-data a {
   color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
 }
-.intormation-contacts a:hover,
-.intormation-contacts a:focus {
+.contact-data:hover,
+.contact-data:focus {
   color: var(--hover-focus-color);
 }
